--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Lymphatic Mechanobiology Lab # the website title (if blank, full name will be used instead)
-first_name: >
+first_name: R
 middle_name: >
 last_name: >
 contact_note: >
