--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 title: Lymphatic Mechanobiology Lab # the website title (if blank, full name will be used instead)
 first_name: Mohammad 
 middle_name: >
-last_name: Razavi
+last_name: Razavi 
 contact_note: The best way to reach out is by email
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
+description:  # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
+footer_text: 
   # Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   # Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   # Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
