--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -41,11 +41,11 @@ scholar_userid: qw6NjREAAAAJ # your Google Scholar ID
 # whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
-work_url: https://engineering.unl.edu/mme/faculty/mohammad-razavi/ # work page URL
+# work_url: https://engineering.unl.edu/mme/faculty/mohammad-razavi/ # work page URL
 x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social:  # can be any name here other than the ones already defined above
+custom_social: > # can be any name here other than the ones already defined above
   logo: https://ucomm.unl.edu/sites/unl.edu.university-communication/files/styles/no_crop_960/public/media/image/nebraska-n.jpg # can be png, svg, jpg
   title: UNL Website
   url: https://engineering.unl.edu/mme/faculty/mohammad-razavi/
