--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Lymphatic Mechanobiology Lab # the website title (if blank, full name wil
 first_name: Mohammad 
 middle_name: >
 last_name: Razavi
-contact_note: The best way to reach out is by email
+contact_note: >
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Lymphatic Mechanobiology
 footer_text: >
