--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Lymphatic Mechanobiology Lab # the website title (if blank, full name will be used instead)
+title: Lymphatic Mechanobiology &BioEngineering Lab (LMBL) # the website title (if blank, full name will be used instead)
 first_name: Mohammad 
 middle_name: >
 last_name: Razavi
 contact_note: >
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Lymphatic Mechanobiology
-footer_text: >
+  Lymphatic Mechanobiology &BioEngineering Lab (LMBL)
+footer_text: All rights reserved.
 keywords: lymphatics, computational modeling, biomechanics # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
