modified:   _data/socials.yml

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -45,7 +45,7 @@ scholar_userid: qw6NjREAAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-# custom_social:  # can be any name here other than the ones already defined above
-#   logo: https://ucomm.unl.edu/sites/unl.edu.university-communication/files/styles/no_crop_960/public/media/image/nebraska-n.jpg # can be png, svg, jpg
-#   title: UNL Website
-#   url: https://engineering.unl.edu/mme/faculty/mohammad-razavi/
+custom_social:  # can be any name here other than the ones already defined above
+  logo: https://ucomm.unl.edu/sites/unl.edu.university-communication/files/styles/no_crop_960/public/media/image/nebraska-n.jpg # can be png, svg, jpg
+  title: UNL Website
+  url: https://engineering.unl.edu/mme/faculty/mohammad-razavi/
