--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: Lymphatic Mechanobiology &BioEngineering Lab (LMBL) # the website title (if blank, full name will be used instead)
-first_name: Mohammad 
+first_name:  
 middle_name: >
-last_name: Razavi
+last_name: Razavi Lab
 contact_note: >
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Lymphatic Mechanobiology &BioEngineering Lab (LMBL) 1
